Add collission handler
Instead of allowing player to move through an object on collision, it
should not be "repelled" from passing through it.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,12 @@
     "typeinfo": "cpp",
     "unordered_map": "cpp",
     "utility": "cpp",
-    "filesystem": "cpp"
+    "filesystem": "cpp",
+    "*.tcc": "cpp",
+    "compare": "cpp",
+    "concepts": "cpp",
+    "deque": "cpp",
+    "ranges": "cpp"
   },
   "C_Cpp.errorSquiggles": "Enabled"
 }
